@@ -1,0 +1,3 @@
+autom4te.cache
+Makefile
+config.status
